LIST OF CHANGES FOR NPG-QC PACKAGE

 - GitHub CI - updated deprecated v2 runner action to v3
 - Following a release on 07/09/2024, see https://metacpan.org/dist/App-perlbrew/changes
   the checksum of the script served by https://install.perlbrew.pl had changed.
   https://install.perlbrew.pl is a redirect to raw
   https://github.com/gugod/App-perlbrew/blob/master/perlbrew-install, so
   the change originates from GitHub and can be trusted. Our CI flow compares
   the checksum of the downloaded script to the expected value. We now store
   an updated expeced checksum value, which corresponds to the latest release.

release 72.2.0 (2024-08-30)
 - npg_qc::autoqc::check::review:
   1. To enable access to information about a sequencing run (from RunInfo.xml,
      {r,R}unParameters.xml), added an optional 'runfolder_path' attribute.
      The attribute will have to be set by the caller.
   2. Added a new applicability criteria type - 'sequencing_run'
   3. To avoid running the review check unnecessarily in the pipeline context,
      moved ROBO criteria validation to the can_run method.
   4. Introduced an option of defining the ROBO section within the default
      section of the product configuration file.
 - Explained QC outcome change for complex products (merged)

release 72.1.2 (2024-08-05)
 - handle cases where the same tag sequence is seen in both index reads

release 72.1.1 (2024-05-24)
 - Removing Tidyp dependency from CI

release 72.1.0
 - Fixed the bug that was introduced while updating the SeqQC summary display
   for pulldown_metrics incomplete results. The bug manifestation is a display
   appearence of an unexpected raw mean depth value just before the coverage
   value. All values that should be displayed were unaffected by the bug.
 - Removed an unused part of the bin/call_gtck_composite_rpt.pl script.
   This part contained the code that failed the compilation following the
   deletion of the short_info role in wtsi-npg/npg_tracking#812
